<resources>
    <string name="app_name">Calendar medicamente</string>
    <string name="package_name">ro.umfcd.stud.arteneraluca.myapplication</string>

    <string name="start_button_text">Spre calendarul cu medicamente</string>
    <string name="generate_report_button_text">Informații despre medicamentele luate</string>

    <string name="download_file_btn">Descarcă fișier</string>
    <string name="reportPage_header">Informații despre medicamentele luate</string>
    <string name="startDateTextView">Tratament început din data:</string>
    <string name="confirmedDosesTextView">Doze administrate:</string>
    <string name="missedDosesTextView">Doze neadministrate:</string>
    <string name="reportDateTextView">Afișat la data de </string>

    <string name="returnToToday">Întoarce-te la ziua curentă</string>
    <string name="setNewAlarm">Setează Alarma</string>
    <string name="gridDosageDisplay">Unitatea de dozare pe administrare:</string>

    <string-array name="Treatment_length">
        <item>Zile</item>
        <item>Săptămâni</item>
        <item>Luni</item>
        <item>Ani</item>
    </string-array>

    <string-array name="perDay_freq">
        <item>O administrare pe zi</item>
        <item>2 administrări pe zi</item>
        <item>3 administrări pe zi</item>
        <item>4 administrări pe zi</item>
    </string-array>

    <string-array name="dayNames">
        <item>Lu</item>
        <item>Ma</item>
        <item>Mi</item>
        <item>Jo</item>
        <item>Vi</item>
        <item>Sâ</item>
        <item>Du</item>
    </string-array>

    <string-array name="monthNames">
        <item>Ian</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>Mai</item>
        <item>Iun</item>
        <item>Iul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string name="testDate">00</string>
    <string name="testDay">TD</string>
    <string name="testHour">HH:SS</string>
    <string name="testMedNameDetails">Medication name and dosage</string>
    <string name="testMedName">Medication name</string>
    <string name="testDosage">Med dosage</string>
    <string name="testMedDetails"> Other Details</string>
    <string name="testMonth">Month</string>
    <string name="testAlarmDialogText">Mesaj pentru utilizator! ID=</string>

//Alarm Dialog
    <string name="confirmButton">Le-am luat</string>
    <string name="snoozeButton">Amână 30 de minute</string>
    <string name="denyButton">Nu le-am luat</string>

//Set new treatment page
    <string name="alarm_title">Alarmă nouă</string>                                 //not used yet
    <string name="medName_text">Numele medicamentului*:</string>
    <string name="medName_hint">Ex: Propranolol</string>
    <string name="dosage_txt">Unitatea de dozare*: </string>
    <string name="dosageHint">Capsulă, mL, etc.</string>
    //Toggle button on/off text for treatment duration
    <string name="durationOff">Continuă </string>
    <string name="durationOn">Fixă</string>
    <string name="alarmDuration">Durata tratamentului:</string>
    <string name="startDate">Selectează data de început*: </string>
    <string name="startDate_hint">Selectează data</string>
    <string name="alarmFreq">Frecvența tratamentului*:</string>
    <string name="alarmsNum">Număr*</string>
    <string name="hour_picker_hint">Selectează ora:* </string>
    <string name="other_details_hint">Detalii suplimentare.
    Ex:Momentul administrării, Interacțiuni cu alimente, Reacții adverse frecvente</string>
    <string name="alarmSaveButtonName">Salvează</string>
    <string name="delete_alarm_button_value">Sterge</string>
    //Error messages
    <string name="errorMedNameMandatory">Completați câmpurile obligatorii, marcate cu "*"!</string>

    //Alarm frequency radio group names

    <string name="daily">Zilnic</string>
    <string name="weekly">Săptămânal</string>

    //Alarm Page Modes
    <string name="alarmSetModeName">Mode</string>
    <string name="alarmModeNew">New</string>
    <string name="alarmModeEdit">Edit</string>

    //Alarm types
    <string name="alarmActivate">Activate</string>
    <string name="alarmSet">Set</string>

    //Alarm Frequency Type
    <string name="alarmFrequencyDaily">Daily</string>
    <string name="alarmFrequencyWeekly">Weekly</string>

    //Empty messages
    <string name="blankFragmentName">Gol</string>

    //Files - Storage
    <string name="treatmentSaveFileName">Fisier02</string>
    <string name="reportSaveFileName">RaportAlarme.txt</string>
    <string name="medNameTag">MedName</string>
    <string name="dosageTag">Dosage</string>
    <string name="frequencyTag">Frequency</string>
    <string name="dateTag">StartDate</string>
    <string name="dateEndTag">EndDate</string>
    <string name="notesTag">Notes</string>
    <string name="dailyTreatmentTag">DailyTreatment</string>
    <string name="dailyFrequencyHourTag">DailyFreqHour</string>
    <string name="weeklyFrequencyDayTag">WeeklyDayFreq</string>
    <string name="fixedFrequencyNumber">FixedFrquencyNumber</string>
    <string name="fixedFrequencySpinnerPosition">FixedFrquencySpinnerPosition</string>
    <string name="confirmedCountTag">AlarmConfirmedCount</string>
    <string name="deniedCountTag">AlarmDeniedCount</string>
    <string name="delayedCountTag">AlarmDelayedCount</string>

    <string name="ReportFileStart">Raport Alarme:</string>
    <string name="ReportTreatmentTag">Tratament:</string>

    <string name="dateFormat">dd MMM yyy</string>
    <string name="hourFormat">HH:mm</string>

</resources>
