<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grid_item_background">

    <TextView
        android:id="@+id/hourDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/object_padding"
        android:text="@string/testHour"
        android:textSize="@dimen/project_text_size"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medNameDisplay" />

    <TextView
        android:id="@+id/medNameDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:padding="@dimen/object_padding"
        android:text="@string/testMedName"
        android:textSize="@dimen/titles_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--TextView
        android:id="@+id/dosageTextDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/object_padding"
        android:text="@string/gridDosageDisplay"
        android:textSize="@dimen/project_text_size"
        app:layout_constraintEnd_toStartOf="@+id/dosageDisplay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medNameDisplay" /-->

    <TextView
        android:id="@+id/dosageDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/object_padding"
        android:text="@string/testDosage"
        android:textSize="@dimen/project_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hourDisplay" />

    <TextView
        android:id="@+id/otherDetailsDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/object_padding"
        android:text="@string/testMedDetails"
        android:textSize="@dimen/project_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dosageDisplay" />


</android.support.constraint.ConstraintLayout>